# tch-geometric

./: .gitignore  CHANGELOG.md  Cargo.toml  MANIFEST.in  Makefile  README.md  cliff.toml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.cargo/: config.toml
.github/workflows/: auditwheel  building.yml  ci.yml  release.yml  release.yml.bak  setup_env.sh
.github/workflows/cuda/: cpu-env.sh  cu102-env.sh  cu111-env.sh
.github/workflows/scripts/: setup_conda.sh  setup_pypi.sh
benches/: internal.rs
conda/tch_geometric/: build_conda.sh  meta.yaml
examples/: hgt_sampling.py  main.py  negative_sampling.py  neighbor_sampling.py  neighbor_sampling_typed.py  random_walk.py
src/: lib.rs  python.rs
src/algo/: budget_sampling.rs  hgt_sampling.rs  mod.rs  negative_sampling.rs  neighbor_sampling.rs  random_walk.rs
src/data/: convert.rs  graph.rs  io.rs  mod.rs  storage.rs  transform.rs
src/utils/: algo.rs  iter.rs  mod.rs  random.rs  sampling.rs  tensor.rs  types.rs  utils.rs
tch_geometric/: __init__.py  tch_geometric.pyi  types.py
tch_geometric/data/: conversion.py  subgraph.py
tch_geometric/loader/: __init__.py  budget_loader.py  custom_loader.py  hgt_loader.py  neighbor_loader.py  types.py  utils.py
tch_geometric/transforms/: __init__.py  budget_sampling.py  constrastive_merge.py  hgt_sampling.py  negative_sampling.py  neighbor_sampling.py
tch_geometric/utils/: iter.py
tests/: fakedataset.npz  fakeheterodataset.npz  karate.npz
