[package]
name = "tch-geometric"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tch_geometric"
crate-type = ["cdylib"]

[dependencies]
thiserror = "1.0"
rayon = "1.5.1"
num-traits = "0.2"
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
pyo3 = { version = "0.15.1" }
#tch = { git = "https://github.com/EgorDm/tch-rs.git", default-features = false }
tch = { path = "/data/pella/projects/University/Thesis/rust/tch-rs", default-features = false }

[dev-dependencies]
ndarray = "0.15"

[features]
extension-module = ["pyo3/extension-module", "tch/torch_python"]
default = ["extension-module"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
