[package]
name = "tch-geometric"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tch_geometric"
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "1.0"
rayon = "1.5.1"
num-traits = "0.2"
rand = { version = "0.8.5", features = ["small_rng"], default-features = false }
tch = { git = "https://github.com/EgorDm/tch-rs.git", branch="main", default-features = false }
lazy_static = { version = "1.4.0" }
pyo3 = { version = "0.15.1", optional = true }

[dev-dependencies]
ndarray = "0.15"
criterion = "0.3"

[features]
extension-module = ["pyo3/extension-module", "tch/torch_python", "pyo3"]
default = ["extension-module"]
