[metadata]
name = tch_geometric
version = 0.1.0
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Rust
    Operating System :: POSIX

[options]
packages = tch_geometric
include_package_data = True
zip_safe = False